# workshop-python-aula20

./: README.md  pyproject.toml
backend/: crud.py  database.py  router.py  schemas.py
