[tool.poetry]
name = "crud-aula20"
version = "0.1.0"
description = "aula jornada dados sobre CRUD com back e frontend"
authors = ["Thiago Ferraz"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
pydantic = {extras = ["email"], version = "^2.10.4"}
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
